--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/icon" href="favicon.ico">
     <title>Todo App - AR</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
